@@ -30,6 +30,7 @@ G 11069	update the mail.jar manifest to include DynamicImport-Package
 <no id>	add mail.pop3.filecache.enable property for caching messages in tmp file
 <no id>	add mail.mime.ignorewhitespacelines property, default false
 <no id>	add support for IMAP UNSELECT command
+<no id>	add mail.mime.contentypehandler System property, to clean Content-Type
 
 
 		  CHANGES IN THE 1.4.3 RELEASE
